# linkedin-apply-assistant

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LEGAL.md  LICENSE  MIGRATION.md  README.md  RELEASE_CHECKLIST.md  SAFETY.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  install.ps1  package.json  pyproject.toml  release-manifest.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  config_help.yml  docs.yml  feature_request.yml  safety_compliance.yml
configs/: config.example.yml  qa_bank.example.yml
docs/: apply.md  assist.md  browser-session.md  ci-and-release-policy.md  commands.md  install-and-configuration.md  registry-publication-strategy.md  reports.md  search.md  troubleshooting.md
examples/: dry_run_input.example.json
scripts/: quality.py  release.py
tests/: test_assist_workflow.py  test_browser_safety.py  test_cli_contract.py  test_cli_help.py  test_community_health.py  test_config_diagnostics.py  test_contracts.py  test_distribution_metadata.py  test_distribution_smoke.py  test_docs_smoke.py  test_fill_adapters.py  test_module_surfaces.py  test_npm_launcher.py  test_privacy_scans.py  test_quality_gate.py  test_registry_publication_strategy.py  test_release_manifest.py  test_release_readiness.py  test_release_script.py  test_report_redaction.py  test_runtime_boundaries.py  test_runtime_decoupling.py  test_safety_policy.py  test_search_workflow.py  test_selector_separation.py  test_workflow_foundation.py  test_workflow_safety.py
(+20 files in other folders)
