[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-apply-assistant"
version = "0.1.4"
description = "Local LinkedIn application assistant with user-visible browser workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.40",
  "scrapling>=0.2.0",
  "PyYAML>=6.0",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3"]
dev = [
  "build>=1.0",
  "pip-audit>=2.7",
  "pytest>=9.0.3",
  "ruff>=0.6",
]

[project.scripts]
linkedin-apply-assistant = "linkedin_apply_assistant.cli:main"

[project.urls]
Homepage = "https://github.com/MohammedGhazal09/linkedin-apply-assistant#readme"
Repository = "https://github.com/MohammedGhazal09/linkedin-apply-assistant"
Issues = "https://github.com/MohammedGhazal09/linkedin-apply-assistant/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
markers = [
  "live: opt-in tests that touch live services, real browser profiles, or network targets",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/test_cli_contract.py" = ["E402"]
"tests/test_runtime_boundaries.py" = ["E402"]
"tests/test_runtime_decoupling.py" = ["E402"]
